force-app/main/default/objects/Contact/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>TimesheetApprover</fullName>
            </value>
            <value>
                <fullName>TimesheetEmployee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>