force-app/main/default/objects/Contact/fields/Record_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Label__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Label</label>
    <type>Text</type>
</CustomField>