force-app/main/default/objects/Contact/fields/Recruiting_Notes_Talent_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Notes_Talent_Acquisition__c</fullName>
    <label>Recruiting Notes - Talent Acquisition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>