force-app/main/default/objects/Contact/fields/Recruitment_Enjoyment__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Enjoyment__c</fullName>
    <label>Recruitment Enjoyment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>