force-app/main/default/objects/Contact/fields/Recruitment_Stage__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Stage__c</fullName>
    <description>Stages of the application(New, Interviewing, Placed etc)</description>
    <label>Recruitment Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Interviewing</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>