force-app/main/default/objects/Contact/fields/References_Names_s__c.field-meta.xml
<CustomField>
    <fullName>References_Names_s__c</fullName>
    <label>References Names #&apos;s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>