force-app/main/default/objects/Contact/fields/Referral_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Referral_Relationship__c</fullName>
    <description>Relationship with the referred person</description>
    <label>Referral Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Colleague</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>