force-app/main/default/objects/Contact/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <description>Source of Reference if applicable</description>
    <label>Referral Source</label>
    <length>25</length>
    <type>Text</type>
</CustomField>