force-app/main/default/objects/Contact/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <description>Uploaded resume</description>
    <label>Resume</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>