force-app/main/default/objects/Contact/fields/Resume_Text__c.field-meta.xml
<CustomField>
    <fullName>Resume_Text__c</fullName>
    <description>Parsed Resume text for Search and matching functionalities</description>
    <label>Resume Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>