force-app/main/default/objects/Contact/fields/Sales_Enjoyment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Enjoyment__c</fullName>
    <label>Sales Enjoyment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>