force-app/main/default/objects/Contact/fields/Sense_Suppression_Date__c.field-meta.xml
<CustomField>
    <fullName>Sense_Suppression_Date__c</fullName>
    <label>Sense Suppression Date</label>
    <type>Date</type>
</CustomField>