force-app/main/default/objects/Contact/fields/Settings_Preference__c.field-meta.xml
<CustomField>
    <fullName>Settings_Preference__c</fullName>
    <label>Settings Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Acute Care Hospital</fullName>
            </value>
            <value>
                <fullName>Aquatic Therapy</fullName>
            </value>
            <value>
                <fullName>Assisted Living Facility</fullName>
            </value>
            <value>
                <fullName>Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Charter School</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Correctional</fullName>
            </value>
            <value>
                <fullName>Family Practice</fullName>
            </value>
            <value>
                <fullName>Health Plan</fullName>
            </value>
            <value>
                <fullName>Home Health</fullName>
            </value>
            <value>
                <fullName>Hospice</fullName>
            </value>
            <value>
                <fullName>In-Patient Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Long Term Acute Care Hospital</fullName>
            </value>
            <value>
                <fullName>Managed Care</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Outpatient</fullName>
            </value>
            <value>
                <fullName>Outpatient - Ortho</fullName>
            </value>
            <value>
                <fullName>Outpatient - Private Practice</fullName>
            </value>
            <value>
                <fullName>Outpatient - Sports</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Psych / Mental Health</fullName>
            </value>
            <value>
                <fullName>Schools</fullName>
            </value>
            <value>
                <fullName>SNF / LTC</fullName>
            </value>
            <value>
                <fullName>Sub Acute Rehab</fullName>
            </value>
            <value>
                <fullName>Surgery Center</fullName>
            </value>
            <value>
                <fullName>Third Party Administrator</fullName>
            </value>
            <value>
                <fullName>Urgent Care</fullName>
            </value>
            <value>
                <fullName>Veterans Affairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>