force-app/main/default/objects/Contact/fields/Skills_and_References_on_File__c.field-meta.xml
<CustomField>
    <fullName>Skills_and_References_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skills and References on File</label>
    <type>Checkbox</type>
</CustomField>