force-app/main/default/objects/Contact/fields/Source_Error__c.field-meta.xml
<CustomField>
    <fullName>Source_Error__c</fullName>
    <label>Source Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>