force-app/main/default/objects/Contact/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Social Security Number</description>
    <label>SSN</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>