force-app/main/default/objects/Contact/fields/Taking_any_Rx_Medications__c.field-meta.xml
<CustomField>
    <fullName>Taking_any_Rx_Medications__c</fullName>
    <label>Taking any Rx Medications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>