force-app/main/default/objects/Contact/fields/Taking_Boards_New_Grad__c.field-meta.xml
<CustomField>
    <fullName>Taking_Boards_New_Grad__c</fullName>
    <label>Taking Boards - New Grad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>