force-app/main/default/objects/Contact/fields/Type_of_Employment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Employment__c</fullName>
    <label>Type of Employment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local Contract</fullName>
            </value>
            <value>
                <fullName>Part Time / PRN</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Travel Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>