force-app/main/default/objects/Contact/fields/Type_of_Visa_Required__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Visa_Required__c</fullName>
    <label>Type of Visa Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>