force-app/main/default/objects/Contact/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>UserName</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>