force-app/main/default/objects/Contact/fields/Verified_Licensure__c.field-meta.xml
<CustomField>
    <fullName>Verified_Licensure__c</fullName>
    <label>Verified Licensure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>