force-app/main/default/objects/Contact/fields/Veteran_Status__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Status__c</fullName>
    <description>Veteran status for compliance</description>
    <label>Veteran Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Reservist</fullName>
            </value>
            <value>
                <fullName>Inactive Reservist</fullName>
            </value>
            <value>
                <fullName>Newly Separated Veteran</fullName>
            </value>
            <value>
                <fullName>Special Disable Veteran</fullName>
            </value>
            <value>
                <fullName>Other Protected Veteran</fullName>
            </value>
            <value>
                <fullName>None of the Above</fullName>
            </value>
            <value>
                <fullName>I don’t wish to answer</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>