force-app/main/default/objects/Contact/fields/What_are_your_strengths__c.field-meta.xml
<CustomField>
    <fullName>What_are_your_strengths__c</fullName>
    <label>What are your strengths</label>
    <length>255</length>
    <type>Text</type>
</CustomField>