force-app/main/default/objects/Contact/fields/Why_looking_for_New_Pos__c.field-meta.xml
<CustomField>
    <fullName>Why_looking_for_New_Pos__c</fullName>
    <label>Why looking for New Pos.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>