force-app/main/default/objects/Contact/fields/Will_Relocate__c.field-meta.xml
<CustomField>
    <fullName>Will_Relocate__c</fullName>
    <label>Will Relocate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>