force-app/main/default/objects/Contact/fields/Work_Authorization_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization_Expiry__c</fullName>
    <description>Expiration date for visa or work permits</description>
    <label>Work Authorization Expiry</label>
    <type>Date</type>
</CustomField>