force-app/main/default/objects/Contact/fields/Years_in_Profession__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Profession__c</fullName>
    <label>Years in Profession</label>
    <length>255</length>
    <type>Text</type>
</CustomField>