force-app/main/default/objects/Contact/fields/Years_of_A_R_Collections__c.field-meta.xml
<CustomField>
    <fullName>Years_of_A_R_Collections__c</fullName>
    <label>Years of A/R Collections</label>
    <type>TextArea</type>
</CustomField>