force-app/main/default/objects/Contact/fields/Years_of_Billing_and_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Billing_and_Payroll__c</fullName>
    <label>Years of Billing and Payroll</label>
    <type>TextArea</type>
</CustomField>