force-app/main/default/objects/Contact/fields/Years_of_Customer_Service__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Customer_Service__c</fullName>
    <label>Years of Customer Service</label>
    <type>TextArea</type>
</CustomField>