force-app/main/default/objects/Contact/fields/Years_of_Onboarding_Credentialing__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Onboarding_Credentialing__c</fullName>
    <label>Years of Onboarding / Credentialing</label>
    <type>TextArea</type>
</CustomField>