force-app/main/default/objects/Contact/recordTypes/Healthcare_Candidate.recordType-meta.xml
<RecordType>
    <fullName>Healthcare_Candidate</fullName>
    <active>true</active>
    <label>Healthcare Candidate</label>
</RecordType>