force-app/main/default/objects/Contact/recordTypes/Hiring_Manager.recordType-meta.xml
<RecordType>
    <fullName>Hiring_Manager</fullName>
    <active>true</active>
    <label>Hiring Manager</label>
</RecordType>