force-app/main/default/objects/Contact/validationRules/First_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Required</fullName>
    <active>true</active>
    <description>If First Name is blank, display a validation message.</description>
    <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
    <errorMessage>Please enter First Name.</errorMessage>
</ValidationRule>