force-app/main/default/objects/Contact/validationRules/UpdateContactOwner.validationRule-meta.xml
<ValidationRule>
    <fullName>UpdateContactOwner</fullName>
    <active>true</active>
    <description>Prevent non-System Administrator users from changing Prescreen Completed when required mailing address fields are missing</description>
    <errorConditionFormula>(ISCHANGED( Prescreen_Completed__c ) &amp;&amp; TEXT( Prescreen_Completed__c)&lt;&gt; NULL &amp;&amp; ( MailingCity = NULL || MailingState = NULL || MailingPostalCode = NULL  ) &amp;&amp; $Profile.Name &lt;&gt;&apos;System Administrator&apos; &amp;&amp; OwnerId =&apos;0053h000002lIA0&apos; ) || (ISCHANGED( Prescreen_Completed__c ) &amp;&amp; TEXT( Prescreen_Completed__c)&lt;&gt; NULL &amp;&amp; ( MailingCity = NULL || MailingState = NULL || MailingPostalCode = NULL  ) &amp;&amp; $Profile.Name &lt;&gt;&apos;System Administrator&apos;) || ( ISCHANGED( Prescreen_Completed__c ) &amp;&amp; TEXT( Prescreen_Completed__c)&lt;&gt; NULL &amp;&amp; $Profile.Name &lt;&gt;&apos;System Administrator&apos;)</errorConditionFormula>
    <errorMessage>Update Contact Owner and Mailing Address when Prescreen Complete is updated.</errorMessage>
</ValidationRule>